# fronius_cpp

./: .gitignore  CMakeLists.txt
lib/poco/: libPocoData.so.80  libPocoDataSQLite.so.80
lib/yaml/: libyaml-cpp.so.0.7.0
output/: main
src/: CMakeLists.txt  fronius.cpp  main.cpp  read_config.cpp  sqlite_conn.cpp
src/include/: fronius.h  read_config.h  sqlite_conn.h
tst/: CMakeLists.txt  FroniusClient_test.cpp  api_version.txt  test_data.h
